package model.database;

public interface DataOperator {
	
	boolean isThisDataBase(String keeper);
	String getDataBaseName();

}
