package model.database.io;

public interface IOType {
    String format();
    void solveMessage(String message);
}
